<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/informationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/heroImage"
                android:layout_gravity="start"
                android:layout_width="@dimen/profile_image_width"
                android:layout_height="@dimen/profile_image_height"/>

            <LinearLayout
                android:layout_marginStart="@dimen/small_padding"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ID"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="ID: 1"/>

                <TextView
                    android:id="@+id/name"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    tools:text="Title: Iron man"/>

                <TextView
                    android:id="@+id/fullName"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Full name: Tony Stank"/>

                <TextView
                    android:id="@+id/gender"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Gender: Male"/>

                <TextView
                    android:id="@+id/race"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Race: Human"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/chartContainer"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/informationContainer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/powerstatsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        </LinearLayout>


        <LinearLayout
            android:id="@+id/powerstatsContainer"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_padding">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/small_padding"
                    android:background="@color/background_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_padding">

                    <ImageView
                        android:src="@drawable/intelligence"
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_height"
                        android:paddingBottom="@dimen/small_padding"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/intelligence"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/intelligence"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="100"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/small_padding"
                    android:background="@color/background_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_padding">

                    <ImageView
                        android:src="@drawable/strength"
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_height"
                        android:paddingBottom="@dimen/small_padding"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/strength"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/strength"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="100"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/small_padding"
                    android:background="@color/background_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/speed"
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_height"
                        android:paddingBottom="@dimen/small_padding"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/speed"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/speed"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="100"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_padding">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/small_padding"
                    android:background="@color/background_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_padding">

                    <ImageView
                        android:src="@drawable/durability"
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_height"
                        android:paddingBottom="@dimen/small_padding"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/durability"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/durability"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="100"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/small_padding"
                    android:background="@color/background_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_padding">

                    <ImageView
                        android:src="@drawable/power"
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_height"
                        android:paddingBottom="@dimen/small_padding"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/power"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/power"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="100"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/small_padding"
                    android:background="@color/background_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/combat"
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_height"
                        android:paddingBottom="@dimen/small_padding"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/combat"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/combat"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="100"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Spinner
        android:id="@+id/spinner"
        android:spinnerMode="dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/errorMassage"
        android:layout_gravity="center"
        android:text="@string/errorMassage"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</FrameLayout>